# AudioEditor

./: build.gradle  gradle.properties  settings.gradle
FFmpeg-n6.0.1/: build_ffmpeg_one_audio.sh
app/: build.gradle  debug.keystore  proguard-rules.pro
app-business-base/: build.gradle
app-business-base/src/main/: AndroidManifest.xml
app/release/: output-metadata.json
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  amplituda-native-lib.cpp  ffmpeg_cmd.c  ffmpeg_jni_define.h  native-lib.cpp
app/src/main/cpp/ffmpeg/: ffmpeg.c  ffmpeg.h
app/src/main/cpp/include/libavcodec/: mathops.h
app/src/main/cpp/include/libavutil/: timer.h
ffmpegLib/: build.gradle
ffmpegLib/shell/: build_ffmpeg_one.sh  build_ffmpeg_one_audio.sh  build_lame.sh  profile.sh
font/: build.gradle
font/src/main/: AndroidManifest.xml
framework-appprovider/: build.gradle
framework-appprovider/src/main/: AndroidManifest.xml
framework-base/: build.gradle
framework-base/src/main/: AndroidManifest.xml
framework-data/: build.gradle  proguard-rules.pro
framework-data/src/main/: AndroidManifest.xml
framework-dimens-375/: build.gradle
framework-language/: build.gradle
framework-language/src/main/: AndroidManifest.xml
framework-rx/: build.gradle
framework-rx/src/main/: AndroidManifest.xml
framework-simplecache/: build.gradle
framework-simplecache/src/main/: AndroidManifest.xml
framework-sort/: build.gradle  consumer-rules.pro
framework-sort/src/main/: AndroidManifest.xml
framework-themes-deps/: build.gradle
framework-themes-deps/src/main/: AndroidManifest.xml
framework-utils/: build.gradle
framework-utils/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
lame-3.100/: Makefile  config.h  config.status  libtool  test.c
lame-3.100/ACM/: Makefile
lame-3.100/ACM/ADbg/: Makefile
lame-3.100/ACM/ddk/: Makefile
lame-3.100/ACM/tinyxml/: Makefile
lame-3.100/Dll/: Makefile
lame-3.100/doc/: Makefile
lame-3.100/doc/html/: Makefile
lame-3.100/doc/man/: Makefile
lame-3.100/dshow/: Makefile
lame-3.100/frontend/: Makefile
lame-3.100/frontend/.deps/: brhist.Po  console.Po  get_audio.Po  lame_main.Po  lametime.Po  main.Po  parse.Po  timestatus.Po
lame-3.100/include/: Makefile
lame-3.100/lib/: libmp3lame.la
lame-3.100/libmp3lame/: Makefile  libmp3lame.la
lame-3.100/libmp3lame/.deps/: VbrTag.Plo  bitstream.Plo  encoder.Plo  fft.Plo  gain_analysis.Plo  id3tag.Plo  lame.Plo  mpglib_interface.Plo  newmdct.Plo  presets.Plo  psymodel.Plo  quantize.Plo  quantize_pvt.Plo  reservoir.Plo  set_get.Plo  tables.Plo  takehiro.Plo  util.Plo  vbrquantize.Plo  version.Plo
lame-3.100/libmp3lame/.libs/: libmp3lame.lai
lame-3.100/libmp3lame/i386/: Makefile
lame-3.100/libmp3lame/vector/: Makefile
lame-3.100/mac/: Makefile
lame-3.100/macosx/: Makefile
lame-3.100/macosx/English.lproj/: Makefile
lame-3.100/macosx/LAME.xcodeproj/: Makefile
lame-3.100/misc/: Makefile
lame-3.100/mpglib/: Makefile
lame-3.100/mpglib/.deps/: common.Plo  dct64_i386.Plo  decode_i386.Plo  interface.Plo  layer1.Plo  layer2.Plo  layer3.Plo  tabinit.Plo
lame-3.100/vc_solution/: Makefile
recorderLib/: build.gradle
recorderLib/src/main/: AndroidManifest.xml
third-part/StackBlur/: AndroidManifest.xml  build.gradle
timeRuler/: build.gradle
timeRuler/src/main/: AndroidManifest.xml
waveform/: build.gradle
waveform/src/main/: AndroidManifest.xml
widget-image/: build.gradle
widget-image/src/main/: AndroidManifest.xml
widget-link/: build.gradle
widget-link/src/main/: AndroidManifest.xml
widget-misc/: build.gradle
widget-misc/src/main/: AndroidManifest.xml
widget-recyclerview/: build.gradle
widget-text/: build.gradle
widget-toast/: build.gradle
(+834 files in other folders)
